After checking build - v2

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <h1 style="text-align: center;"><span style="text-decoration: underline;text-decoration-color: red;"><strong>Thank you for your contribution</strong></span></h1>
 <p><span style="text-decoration: underline;"><strong></strong></span></p>
 <p style="font-family:'Courier New';color:blue">Hi Volunteers,&nbsp;</span></p>
-<p style="font-family:'Courier New';color:blue">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;This year, We are planning&nbsp; to pony up surplus cash in your vault. We want to recognize each working class hero and we want to some fraction of tax to relaxed as as recognition of your&nbsp;voluntary contribution to city building efforts. Thanks again.</span></p>
+<p style="font-family:'Courier New';color:blue">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;This year, We are planning to pony up your vault with our surplus cash. This will be the small appreciation for your help to contribute our society. And also We want to recognize each working class heros, So we decided to reduce some fraction of tax to be relaxed as as recognition of your voluntary contribution to city building efforts. Thanks again.</span></p>
 <p style="font-family:'Courier New';color:blue">Regards,</p>
 <p style="font-family:'Courier New';color:blue"><i>Citizen Disbursement System (CDS) Team</i></p>
 <p style="font-family:'verdana';color: brown;text-align: center;"> <b> This site visted by  {{count}}  times since deployment. </b> </p>
