Added singapore in lndex.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,6 @@
 <p style="font-family:'Courier New';color:blue">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;This year, We are planning to pony up your vault with our surplus cash. This will be the small appreciation for your help to contribute our society. And also We want to recognize each working class heros, So we decided to reduce some fraction of tax to be relaxed as as recognition of your voluntary contribution to city building efforts. Thanks again.</span></p>
 <p style="font-family:'Courier New';color:blue">Regards,</p>
 <p style="font-family:'Courier New';color:blue"><i>Citizen Disbursement System (CDS) Team</i></p>
-<p style="font-family:'Courier New';color:blue"><i>THE BERKELEY PROJECT</i></p>
+<p style="font-family:'Courier New';color:blue"><i>THE BERKELEY PROJECT - Singapore</i></p>
 <p style="font-family:'verdana';color: brown;text-align: center;"> <b> This site visted by  {{count}}  times since deployment. </b> </p>
 </html>
